[package]
name = "arc_new_cyclic_n"
description = "Functions like Arc::new_cyclic but with arities greater than 1"
license = "MIT"
version = "1.0.1"
edition = "2018"
repository = "https://github.com/philip-peterson/arc_new_cyclic_n"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
